<resources>
    <string name="app_name">WeWhisper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="fragment_home">HomeFragment</string>
    <string name="fragment_consult">ConsultFragment</string>
    <string name="fragment_community">CommunityFragment</string>
    <string name="fragment_treat">TreatFragment</string>
    <string name="fragment_manager">ManagerFragment</string>
    <string name="home">首页</string>
    <string name="consult">咨询</string>
    <string name="community">社区</string>
    <string name="test">测试</string>
    <string name="manager">我的</string>
    <string name="search">搜索</string>
    <string name="circleManager">我的圈子</string>
    <string name="publish">发表</string>
    <string name="publishHistory">发表历史</string>
    <string name="collection">收藏</string>
    <string name="menu_tested">测试历史</string>
    <string name="menu_test_collection">收藏</string>
    <string name="consult_area">咨询专区</string>
    <string name="scheme">治疗方案</string>
    <string name="circle">圈子</string>

</resources>
